<resources>
    <string name="app_name">GoogleImageSearch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_google_image_search">Google Image Search</string>
    <string name="search_text_hint">Enter search query</string>
    <string name="search_button_text">Search</string>
    <string name="item_title_label">Image Title</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_edit_settings">"Edit Settings "</string>
    <string name="advanced_search_label">Advanced Search Options</string>
    <string name="image_size_label">Image Size</string>
    <string name="image_color_label">Image Color</string>
    <string name="image_type_label">Image Type</string>
    <string name="site_restriction_label">Site Filter</string>
    <string name="site_filter_placeholder">enter site hostname</string>
    <string name="save_changes_text">SAVE</string>
    <string name="action_share_icon">Share</string>
    <string name="action_cancel_changes">CANCEL</string>

    <string-array name="image_color_spinner_array">
        <item>any</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>

    <string-array name="image_size_spinner_array">
        <item>any</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>

    <string-array name="image_type_spinner_array">
        <item>any</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

</resources>
