<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.edward.googleimagesearch.activities.EditSettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/advanced_search_label"
        android:id="@+id/tvTitleLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="#000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_size_label"
        android:id="@+id/tvImageSizeLabel"
        android:textSize="15dp"
        android:layout_below="@+id/tvTitleLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="35dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spImageSize"
        android:layout_toRightOf="@+id/tvImageSizeLabel"
        android:layout_alignTop="@+id/tvImageSizeLabel"
        android:spinnerMode="dropdown"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_color_label"
        android:id="@+id/textView2"
        android:textSize="15dp"
        android:layout_below="@+id/spImageSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="6dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spImageColor"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/spImageSize"
        android:layout_toRightOf="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_type_label"
        android:id="@+id/textView3"
        android:textSize="15dp"
        android:layout_below="@+id/spImageColor"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="6dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spImageType"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/spImageColor"
        android:layout_toRightOf="@+id/textView3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="6dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/site_restriction_label"
        android:id="@+id/textView"
        android:textSize="15dp"
        android:layout_below="@+id/spImageType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="6dp"
        android:layout_alignBottom="@+id/etSiteFilter" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etSiteFilter"
        android:layout_below="@+id/spImageType"
        android:layout_alignLeft="@+id/spImageColor"
        android:layout_alignStart="@+id/spImageColor"
        android:hint="@string/site_filter_placeholder"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_changes_text"
        android:id="@+id/btSave"
        android:layout_marginTop="38dp"
        android:layout_below="@+id/etSiteFilter"
        android:onClick="onSaveSettings"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
